[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/UI/ScoreFont.tres" type="BitmapFont" id=1]
[ext_resource path="res://Scripts/UI/Options.gd" type="Script" id=2]
[ext_resource path="res://Sprites/black.png" type="Texture" id=3]
[ext_resource path="res://Objects/UI/ButtonTheme.tres" type="Theme" id=4]
[ext_resource path="res://Scripts/UI/MainOptions.gd" type="Script" id=5]
[ext_resource path="res://Sprites/UI/panel.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/optionsbg.png" type="Texture" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Main"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Main/Control"]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Main/Control"]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Main/Control"]
margin_left = 96.0
margin_top = 144.0
margin_right = 472.0
margin_bottom = 264.0
theme = ExtResource( 4 )
text = "keybinds"

[node name="Button2" type="Button" parent="Main/Control"]
margin_left = 160.0
margin_top = 224.0
margin_right = 536.0
margin_bottom = 344.0
theme = ExtResource( 4 )
disabled = true
enabled_focus_mode = 0
text = "sound"

[node name="Button3" type="Button" parent="Main/Control"]
margin_left = 264.0
margin_top = 312.0
margin_right = 640.0
margin_bottom = 432.0
theme = ExtResource( 4 )
disabled = true
enabled_focus_mode = 0
text = "graphics"

[node name="Keybinds" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Keybinds"]
margin_left = 256.0
margin_top = 72.0
margin_right = 768.0
margin_bottom = 512.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Keybinds/Panel"]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -128.0
margin_right = 920.0
margin_bottom = 552.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="walk_left" type="Control" parent="Keybinds/Panel"]
margin_left = 56.0
margin_top = 72.0
margin_right = 440.0
margin_bottom = 392.0
mouse_filter = 2

[node name="Label" type="Label" parent="Keybinds/Panel/walk_left"]
margin_left = 32.0
margin_top = 48.0
margin_right = 136.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Keybinds/Panel/walk_left"]
margin_left = 232.0
margin_top = 48.0
margin_right = 360.0
margin_bottom = 80.0
focus_mode = 1
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="walk_right" type="Control" parent="Keybinds/Panel"]
margin_left = 56.0
margin_top = 120.0
margin_right = 440.0
margin_bottom = 440.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Keybinds/Panel/walk_right"]
margin_left = 32.0
margin_top = 48.0
margin_right = 162.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Keybinds/Panel/walk_right"]
margin_left = 232.0
margin_top = 48.0
margin_right = 360.0
margin_bottom = 80.0
focus_mode = 1
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump" type="Control" parent="Keybinds/Panel"]
margin_left = 56.0
margin_top = 168.0
margin_right = 440.0
margin_bottom = 488.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Keybinds/Panel/jump"]
margin_left = 32.0
margin_top = 48.0
margin_right = 162.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Keybinds/Panel/jump"]
margin_left = 232.0
margin_top = 48.0
margin_right = 360.0
margin_bottom = 80.0
focus_mode = 1
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dash" type="Control" parent="Keybinds/Panel"]
margin_left = 56.0
margin_top = 216.0
margin_right = 440.0
margin_bottom = 536.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Keybinds/Panel/dash"]
margin_left = 32.0
margin_top = 48.0
margin_right = 162.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "dash"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Keybinds/Panel/dash"]
margin_left = 232.0
margin_top = 48.0
margin_right = 360.0
margin_bottom = 80.0
focus_mode = 1
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Keybinds"]
anchor_bottom = 0.2
margin_left = 16.0
margin_top = 504.0
margin_right = 1112.0
margin_bottom = 664.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave]press          any          key          to          set          action          

press          left          mouse          button          to          toggle"
text = "press          any          key          to          set          action          

press          left          mouse          button          to          toggle"

[connection signal="pressed" from="Main/Control/Button" to="." method="_on_keybinds_pressed"]
[connection signal="pressed" from="Keybinds/Panel/walk_left/Button" to="Keybinds" method="_left_pressed"]
[connection signal="pressed" from="Keybinds/Panel/walk_right/Button" to="Keybinds" method="_right_pressed"]
[connection signal="pressed" from="Keybinds/Panel/jump/Button" to="Keybinds" method="_jump_pressed"]
[connection signal="pressed" from="Keybinds/Panel/dash/Button" to="Keybinds" method="_dash_pressed"]
